Added background effect

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -41,8 +41,8 @@
   color: #ffffff;
   transform: rotate(90deg);
   width: 50rem;
-  height: 9.2vw;
-  margin-top: 10rem;
+  height: 0px;
+  margin-top: 5rem;
   letter-spacing: 0.3rem;
 }
 
@@ -59,7 +59,7 @@
   bottom: 0;
   left: 0;
   padding: 9rem;
-  background-color: #fe6150;
+  background-color: #000000;
   text-align: center;
   z-index: -1;
 }
@@ -85,7 +85,37 @@
   backface-visibility: hidden;
 }
 
-@media only screen and (max-width: 1180px) {
+.bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, rgb(254, 97, 80) 30%, #09f 50%);
+  bottom: 0;
+  left: -50%;
+  opacity: 1;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+
+.bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 4s;
+}
+
+.bg3 {
+  animation-duration: 5s;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(25%);
+  }
+}
+
+@media only screen and (max-width: 1300px) {
   .sideText {
     display: none;
   }
