--- a/src/views/booklist/BookList.css
+++ b/src/views/booklist/BookList.css
@@ -1,24 +1,37 @@
+.topRightText {
+  float: right;
+  margin-top: -120px;
+  margin-right: -200px;
+  font-family: Mohave_regular;
+  font-size: 60px;
+  color: #7ac1b4;
+}
+
 .listContainer {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  position: absolute;
+  grid-template-columns: auto auto auto auto auto;
   padding: 10px;
-  grid-gap: 5px;
+  grid-gap: 10px;
   grid-template-rows: 320px 320px;
+  margin-top: -40px;
+  width: 80vw;
 }
 
 .gridItem {
   position: relative;
-  background-color: rgba(255, 255, 255, 0.8);
-  /* border: 1px solid rgba(0, 0, 0, 0.8); */
+  /* background-color: rgba(0, 0, 0, 0.05); */
+  /* border: 2px solid #fe6150; */
+  border-radius: 10px;
   padding: 20px;
   font-size: 30px;
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
-  backface-visibility: hidden;
 }
 
 .bookTable {
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -28,53 +41,70 @@
 }
 
 .bookImage {
-  width: 100px;
+  width: 130px;
   filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.22));
-  /* transform: rotate(-3deg); */
+  transition: all 0.5s ease;
+}
+
+.bookImage:hover {
+  /* width: 135px; */
+  transform: rotate(10deg);
 }
 
 .listTitle {
   margin-top: 20px;
-  font-family: Bebas_regular;
-  font-size: 20px;
-  max-width: 110px;
+  font-family: Mohave_regular;
+  font-size: 21px;
+  max-width: 125px;
   margin-left: auto;
   margin-right: auto;
+  transition: all 0.5s ease;
+  color: #111111;
+}
+
+.listTitle:hover {
+  color: #7ac1b4;
+  cursor: pointer;
+  font-size: 22px;
 }
 
 .listAuthor {
   font-family: Cantarell_regular;
-  font-size: 13px;
+  font-size: 15px;
   margin-left: auto;
   margin-right: auto;
+  color: #7ac1b4;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1200px) {
+  .listContainer {
+    width: 95vw;
+  }
+  .topRightText {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .listContainer {
+    grid-template-columns: auto auto auto auto;
+  }
+}
+
+@media only screen and (max-width: 800px) {
   .listContainer {
     grid-template-columns: auto auto auto;
-    grid-template-rows: 320px 320px 320px;
-  }
-  .sheet {
-    height: 69rem;
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 600px) {
   .listContainer {
     grid-template-columns: auto auto;
-    grid-template-rows: 320px 320px 320px 320px;
-  }
-  .sheet {
-    height: 69rem;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 400px) {
   .listContainer {
     grid-template-columns: auto;
-    grid-template-rows: 320px 320px 320px 320px 320px 320px 320px 320px;
-  }
-  .sheet {
-    height: 69rem;
   }
 }
