--- a/src/views/book/Book.css
+++ b/src/views/book/Book.css
@@ -6,15 +6,22 @@
   height: 650px;
   width: 75vw;
   grid-column-gap: 20px;
-  margin-top: -30px;
+  margin-top: -60px;
 }
 
 .image {
   /* border: 1px solid rgba(0, 0, 0, 0.8); */
+  position: static;
   padding: 20px;
   width: 350px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
+  transition: all 0.5s ease;
+}
+
+.image:hover {
+  transform: rotate(7deg);
 }
 
 .textContainer {
@@ -42,9 +49,111 @@
 }
 
 .bookDescription {
+  margin-top: 30px;
+  font-family: Cantarell_regular;
+  text-align: left;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.rating {
+  font-family: Cantarell_regular;
+  text-align: left;
+  margin-top: 20px;
+  color: #7ac1b4;
+}
+
+.finished {
+  margin-left: 30px;
   font-family: Cantarell_regular;
   text-align: left;
   font-size: 16px;
   line-height: 150%;
   margin-top: 40px;
+  color: black;
+}
+
+.buttonsWrap {
+  position: absolute;
+  margin-top: 40px;
+
+  text-align: left;
+}
+
+.bookButton1 {
+  font-family: Cantarell_regular;
+  background-color: #7ac1b4;
+  color: white;
+  border: none;
+  padding: 15px 32px;
+  border-radius: 10px;
+  width: 170px;
+  transition: all 0.5s ease;
+}
+
+.bookButton1:hover {
+  background-color: #2c645b;
+}
+
+.bookButton2 {
+  font-family: Cantarell_regular;
+  background-color: #7ac1b4;
+  color: white;
+  border: none;
+  padding: 15px 32px;
+  border-radius: 10px;
+  margin-left: 10vw;
+  width: 170px;
+  transition: all 0.5s ease;
+}
+
+.bookButton2:hover {
+  background-color: #2c645b;
+}
+
+@media only screen and (max-width: 1200px) {
+  .image {
+    margin-top: -10px;
+    width: 25vw;
+  }
+  .finished {
+    display: block;
+    margin-left: 0;
+    margin-top: -0px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .bookTitle {
+    font-size: 60px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .bookAuthor {
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .gridContainer {
+    position: unset;
+    grid-template-columns: auto;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .image {
+    margin-top: 0px;
+    width: 30vw;
+  }
+}
+.bookButton2 {
+  margin-left: 0px;
+}
+
+@media only screen and (max-width: 600px) {
+  .bookButton2 {
+    margin-left: 0px;
+  }
 }
