--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -1,20 +1,20 @@
+.sheet {
+  width: 95vw;
+  display: flex;
+  min-height: 850px;
+  margin-right: auto;
+  background: rgba(255, 255, 255, 1);
+  box-shadow: 0px 14px 55px rgba(0, 0, 0, 0.25);
+  z-index: -1;
+  float: right;
+}
+
 .background {
   position: absolute;
   background: #3dc1de;
   height: 100%;
   width: 100%;
   z-index: -2;
-}
-
-.sheet {
-  width: 97vw;
-  display: flex;
-  height: 850px;
-  margin-right: auto;
-  background: rgba(255, 255, 255, 1);
-  box-shadow: 0px 14px 55px rgba(0, 0, 0, 0.25);
-  z-index: -1;
-  float: right;
 }
 
 .content {
@@ -27,7 +27,9 @@
   font-size: 100px;
   text-orientation: sideways;
   writing-mode: vertical-lr;
-  text-align: center;
+  text-align: left;
+  margin-right: 40px;
+  margin-top: 160px;
 }
 
 .pageBottom {
@@ -98,17 +100,12 @@
   }
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 810px) {
   .sideText {
     display: none;
   }
 
   .topText {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .sheet {
     margin-left: auto;
     margin-right: auto;
   }
