--- a/src/views/book/Book.css
+++ b/src/views/book/Book.css
@@ -5,23 +5,12 @@
   width: 75vw;
   grid-column-gap: 20px;
   margin-top: -60px;
-  min-height: 500px;
+  height: 650px;
 }
 
 .bookCanvas {
   height: 500px;
   width: 32vw;
-}
-
-.image {
-  /* border: 1px solid rgba(0, 0, 0, 0.8); */
-  position: static;
-  padding: 20px;
-  width: 350px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  transition: all 0.5s ease;
 }
 
 .image:hover {
@@ -129,8 +118,8 @@
     margin-right: auto;
   }
 
-  .image {
-    margin-top: 0px;
-    width: 30vw;
+  .bookCanvas {
+    height: 300px !important;
+    width: 32vw;
   }
 }
