--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -6,6 +6,7 @@ a {
   width: 95vw;
   display: flex;
   min-height: 850px;
+  align-items: baseline;
   margin-right: auto;
   background: rgba(255, 255, 255, 1);
   box-shadow: 0px 14px 55px rgba(0, 0, 0, 0.25);
