--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -5,7 +5,6 @@ a {
 .sheet {
   width: 95vw;
   display: flex;
-  min-height: 850px;
   align-items: baseline;
   margin-right: auto;
   background: rgba(255, 255, 255, 1);
@@ -43,7 +42,7 @@ a {
   bottom: 0;
   left: 0;
   padding: 9rem;
-  background-color: #dadada;
+  background-color: #111111;
   text-align: center;
   z-index: -1;
 }
@@ -54,7 +53,7 @@ a {
   margin-top: 100px;
   margin-left: 5vw;
   margin-right: auto;
-  color: #111111;
+  color: #ffffff;
 
   font-size: 12px;
 }
@@ -63,7 +62,7 @@ a {
   opacity: 1;
   font-family: Mohave_regular;
 
-  font-size: 50px;
+  font-size: 40px;
   margin-left: 100px;
   color: #111111;
   transition: color 0.5s ease;
@@ -73,36 +72,6 @@ a {
 .topText:hover {
   color: #7ac1b4;
   cursor: pointer;
-}
-
-.bg {
-  animation: slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #50dbfe 30%, #7ac1b4 50%);
-  bottom: 0;
-  left: -50%;
-  opacity: 1;
-  position: fixed;
-  right: -50%;
-  top: 0;
-  z-index: -1;
-}
-
-.bg2 {
-  animation-direction: alternate-reverse;
-  animation-duration: 4s;
-}
-
-.bg3 {
-  animation-duration: 5s;
-}
-
-@keyframes slide {
-  0% {
-    transform: translateX(-25%);
-  }
-  100% {
-    transform: translateX(25%);
-  }
 }
 
 @media only screen and (max-width: 810px) {
