--- a/src/views/booklist/BookList.css
+++ b/src/views/booklist/BookList.css
@@ -15,13 +15,20 @@
   grid-template-columns: repeat(auto-fit, 300px);
   padding: 5px;
   grid-gap: 10px;
-  margin-top: -30px;
+  margin-top: -90px;
+  margin-bottom: 70px;
 }
 
 .gridItem {
   padding: 20px 10px;
   font-size: 30px;
   text-align: center;
+  height: 300px;
+}
+
+.listCanvas {
+  height: 280px !important;
+  width: 32vw;
 }
 
 .bookTable {
@@ -45,10 +52,10 @@
 }
 
 .listTitle {
-  margin-top: 20px;
+  margin-top: -20px;
   font-family: Mohave_regular;
   font-size: 21px;
-  max-width: 130px;
+  max-width: 160px;
   margin-left: auto;
   margin-right: auto;
   transition: all 0.5s ease;
