--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -7,7 +7,7 @@ a {
   display: flex;
   align-items: baseline;
   margin-right: auto;
-  background: rgba(255, 255, 255, 1);
+  background: linear-gradient(170deg, #ffffff 70%, #f8f8f8 30%);
   box-shadow: 0px 14px 55px rgba(0, 0, 0, 0.25);
   z-index: -1;
   float: right;
