--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -16,7 +16,7 @@ a {
 
 .background {
   position: absolute;
-  background: #3dc1de;
+  background: #7ac1b4;
   height: 100%;
   width: 100%;
   z-index: -2;
